--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Globetrotter</title>
+    <link href="https://fonts.googleapis.com/css2?family=Yeseva+One|Nunito|Roboto&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
-    
+
   </body>
 </html>
